Fix visibility SearchInfo component (edit location pathname)

--- a/src/components/SearchInfo/SearchInfo.scss
+++ b/src/components/SearchInfo/SearchInfo.scss
@@ -2,6 +2,7 @@
   box-shadow: 0 0 20px #40404036;
   padding: 1.3rem;
   margin-top: 18px;
+  line-height: 22px;
 
   &_request {
     font-weight: 600;
